Fazendo marcação da sidebar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
     <title>Doceria Single Page</title>
 </head>
 <body>
-    <h1>Doceria</h1>
+    <div class="container">
+        <div id="sidebar">
+            <div class="sidebar-container">
+                <img src="img/stand.png" alt="Logo Doceria" class="logo"/>
+                <h1>Doceria</h1>
+                <nav>
+                    <ul>
+                        <li><a href="#sessao-bemvindo">Bem Vindo</a></li>
+                        <li><a href="#sessao-sobre">Sobre Nos</a></li>
+                        <li><a href="#sessao-doces1">Doces 1</a></li>
+                        <li><a href="#sessao-doces2">Doces 2</a></li>
+                        <li><a href="#sessao-doces3">Doces 3</a></li>
+                        <li><a href="#sessao-contato">Entre em Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
+        <div class="content">
+
+        </div>
+    </div>
 </body>
 </html>
