--- a/index.html
+++ b/index.html
@@ -29,7 +29,71 @@
         </div>
 
         <div class="content">
-            <h1>Conteúdo</h1>
+            <main>
+                <section id="sessao-bemvindo">
+                    <div class="banner"></div>
+                    <div id="sessao-bemvindo-content">
+                        <h1>Seja bem vindo a Doceria</h1>
+                        <div class="sessao-minibanner"></div>
+                        <div class="sessao-descricao">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis temporibus ullam suscipit ex excepturi assumenda animi quidem. Corporis quasi, minima quae repellendus vel maxime expedita eaque blanditiis explicabo soluta laboriosam?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis temporibus ullam suscipit ex excepturi assumenda animi quidem. Corporis quasi, minima quae repellendus vel maxime expedita eaque blanditiis explicabo soluta laboriosam?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis temporibus ullam suscipit ex excepturi assumenda animi quidem. Corporis quasi, minima quae repellendus vel maxime expedita eaque blanditiis explicabo soluta laboriosam?</p>
+                            <a href="#" class="sessao-bemvindo-btn">Leia mais</a>
+                        </div>
+                    </div>
+                </section>
+                
+                <section id="sessao-sobre">
+                    <div class="sessao-content">
+                        <h1>Sobre nós</h1>
+                        <div class="sessao-minibanner"></div>
+                        <div class="sessao-descricao">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis temporibus ullam suscipit ex excepturi assumenda animi quidem. Corporis quasi, minima quae repellendus vel maxime expedita eaque blanditiis explicabo soluta laboriosam?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis temporibus ullam suscipit ex excepturi assumenda animi quidem. Corporis quasi, minima quae repellendus vel maxime expedita eaque blanditiis explicabo soluta laboriosam?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis temporibus ullam suscipit ex excepturi assumenda animi quidem. Corporis quasi, minima quae repellendus vel maxime expedita eaque blanditiis explicabo soluta laboriosam?</p>
+                        </div>
+                    </div>
+                </section>
+
+                <section id="sessao-doces1">
+                    <h2>Doces 1</h2>
+                    <div class="doces1-imgs banner-galeria" id='img1'></div>
+                    <div class="doces1-imgs banner-galeria" id='img2'></div>
+                    <div class="doces1-imgs banner-galeria" id='img3'></div>
+                    <div class="doces1-imgs banner-galeria" id='img4'></div>
+                    <div class="doces1-imgs banner-galeria" id='img5'></div>
+                </section>
+
+                <section id="sessao-doces2">
+                    <h2>Doces 2</h2>
+                    <div class="doces2-imgs banner-galeria" id='img6'></div>
+                    <div class="doces2-imgs banner-galeria" id='img7'></div>
+                    <div class="doces2-imgs banner-galeria" id='img8'></div>
+                </section>
+
+                <section id="sessao-doces3">
+                    <h2>Doces 3</h2>
+                    <div class="doces3-imgs banner-galeria" id='img9'></div>
+                    <div class="doces3-imgs banner-galeria" id='img10'></div>
+                    <div class="doces3-imgs banner-galeria" id='img11'></div>
+                    <div class="doces3-imgs banner-galeria" id='img12'></div>
+                </section>
+
+                <section id="sessao-contato">
+                    <h2>Entre em contato</h2>
+                    <form id="form-contato">
+                        <input type="text" name="name" placeholder="Nome"/>
+                        <input type="email" name="email" placeholder="Email"/>
+                        <textarea name="message" placeholder="Escreva sua mensagem ..." cols="30" rows="10"></textarea>
+                        <input type="submit" value="Enviar"/>
+                    </form>
+                </section>
+
+                <footer>
+                    <p>Robert Santos @ 2019</p>
+                </footer>
+            </main>
         </div>
     </div>
 </body>
